2017-09-20  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (nasl_lint_defvar): Add new GSList for local variables.
	Handle variables declared as local.

	* Changelog: Correct the format of the last entry.

2017-09-19  Juan Jose Nicola  <juan.nicola@greenbone.net>

	openvas-nasl-lint does not go deeper through a declared function
	if it is not called/used. If a not used function has unsatisfied
	dependencies, no errors will show.

	* nasl/lint.c (nasl_lint_def): Receive a new argument. Add a comment.
	Check if a declared function will be used, before to continue to going
	deeper in the tree.
	(nasl_lint_call): Receive a new argument. Check if a
	declared function will be used, before to continue to going deeper in
	the tree.
	(nasl_lint_defvar): Receive a new argument. Check if a
	declared function will be used, before to continue to going deeper in
	the tree.
	(make_call_func_list): New function. It adds to a list
	all called functions.
	(nasl_lint): New GSList. Call make_call_func_list().
	Pass as argument the new GSList to functions. Free the new list.

2017-09-15  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (nasl_lint_defvar): Handle case in which a variable
	is declared incrementing it self. Handle the case in wich a variable
	is declared with 'plus equal'.

2017-09-14  Juan Jose Nicola  <juan.nicola@greenbone.net>

	* nasl/lint.c (add_predef_varname): Remove keywords and add them
	calling get_nasl_library().

	* nasl/nasl_init.c (add_nasl_library): New function. Add built-in
	variables to a GSlist.

	* nasl/nasl_init.h: Add function prototype.

2017-09-14  Hani Benhabiles  <hani.benhabiles@greenbone.net>

	* src/pluginload.c (plugins_reload_from_dir): Don't call
	nvticache_save(). Don't set include dirs. Exit instead of returning.
	(include_dirs): New function.
	(plugins_init): Fork a child process to load-up plugins and prevent main
	process memory footprint growth. Call nvtiache_save() and new function
	accordingly.
